Pushing the docs for revision for branch: development, commit b40bc5022276fdbf072498ceed1bef7d8a420c6d, folder: dev

--- a/dev/index.html
+++ b/dev/index.html
@@ -209,7 +209,7 @@ Please use SMAC v2 (Java) for comparisons against SMAC.</p>
       
     </p>
     <p>
-        &copy; Copyright 2015, Marius Lindauer, Stefan Falkner, Katharina Eggensperger, Aaron Klein, Frank Hutter.<br/>
+        &copy; Copyright 2015-2016, Marius Lindauer, Matthias Feurer, Katharina Eggensperger, Aaron Klein, Stefan Falkner and Frank Hutter.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.8.<br/>
     </p>
   </div>
