--- a/dev/search.html
+++ b/dev/search.html
@@ -170,7 +170,7 @@
       
     </p>
     <p>
-        &copy; Copyright 2015, Marius Lindauer, Stefan Falkner, Katharina Eggensperger, Aaron Klein, Frank Hutter.<br/>
+        &copy; Copyright 2015-2016, Marius Lindauer, Matthias Feurer, Katharina Eggensperger, Aaron Klein, Stefan Falkner and Frank Hutter.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.8.<br/>
     </p>
   </div>
