--- a/dev/installation.html
+++ b/dev/installation.html
@@ -18,7 +18,8 @@
         VERSION:     '0.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
@@ -31,7 +32,6 @@
     <script type="text/javascript" src="_static/bootstrap-sphinx.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="top" title="SMAC 0.2.1 documentation" href="index.html" />
     <link rel="next" title="Manual" href="manual.html" />
     <link rel="prev" title="SMAC3 documentation!" href="index.html" />
 <meta charset='utf-8'>
@@ -170,14 +170,14 @@ python setup.py install
         <br/>
         
 <div id="sourcelink">
-  <a href="_sources/installation.txt"
+  <a href="_sources/installation.rst.txt"
      rel="nofollow">Source</a>
 </div>
       
     </p>
     <p>
         &copy; Copyright 2015-2016, Marius Lindauer, Matthias Feurer, Katharina Eggensperger, Aaron Klein, Stefan Falkner and Frank Hutter.<br/>
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.9.<br/>
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.<br/>
     </p>
   </div>
 </footer>
