--- a/dev/_modules/smac/facade/smac_facade.html
+++ b/dev/_modules/smac/facade/smac_facade.html
@@ -528,7 +528,8 @@
             <span class="k">elif</span> <span class="n">scenario</span><span class="o">.</span><span class="n">run_obj</span> <span class="o">==</span> <span class="s1">&#39;quality&#39;</span><span class="p">:</span>
                 <span class="n">runhistory2epm</span> <span class="o">=</span> <span class="n">RunHistory2EPM4Cost</span><span class="p">(</span><span class="n">scenario</span><span class="o">=</span><span class="n">scenario</span><span class="p">,</span> <span class="n">num_params</span><span class="o">=</span><span class="n">num_params</span><span class="p">,</span>
                                                      <span class="n">success_states</span><span class="o">=</span><span class="p">[</span>
-                                                         <span class="n">StatusType</span><span class="o">.</span><span class="n">SUCCESS</span><span class="p">,</span> <span class="p">],</span>
+                                                         <span class="n">StatusType</span><span class="o">.</span><span class="n">SUCCESS</span><span class="p">,</span> 
+                                                         <span class="n">StatusType</span><span class="o">.</span><span class="n">CRASHED</span><span class="p">],</span>
                                                      <span class="n">impute_censored_data</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">impute_state</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 
             <span class="k">else</span><span class="p">:</span>
